--- a/src/main/java/com/creatingskies/game/editor/Game.fxml
+++ b/src/main/java/com/creatingskies/game/editor/Game.fxml
@@ -19,6 +19,6 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#addNewGame" styleClass="button-default" text="Add Game" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#addNewGame" styleClass="button-default" text="Add Game" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
    </children>
 </AnchorPane>
