--- a/src/main/java/com/creatingskies/game/statistics/Statistics.fxml
+++ b/src/main/java/com/creatingskies/game/statistics/Statistics.fxml
@@ -6,17 +6,32 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="450.0" prefWidth="620.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.creatingskies.game.statistics.StatisticsController">
+<AnchorPane prefHeight="450.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.statistics.StatisticsController">
    <children>
-      <BarChart fx:id="barChart" layoutX="45.0" layoutY="25.0" prefHeight="450.0" prefWidth="620.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="50.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" fx:id="xAxis" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </BarChart>
-      <Button layoutX="20.0" layoutY="25.0" mnemonicParsing="false" onAction="#generate" text="Generate" />
+      <AnchorPane maxWidth="225.0" prefHeight="450.0" prefWidth="225.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <children>
+            <Label layoutX="25.0" layoutY="7.0" text="Game" />
+            <Label layoutX="25.0" layoutY="64.0" text="Company" />
+            <Label layoutX="25.0" layoutY="123.0" text="Start Date" />
+            <DatePicker fx:id="startDatePicker" layoutX="25.0" layoutY="143.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" />
+            <Label layoutX="26.0" layoutY="182.0" text="End Date" />
+            <DatePicker fx:id="endDatePicker" layoutX="26.0" layoutY="202.0" />
+            <Button layoutX="125.0" layoutY="255.0" mnemonicParsing="false" onAction="#filterResults" prefHeight="25.0" prefWidth="75.0" text="Filter" />
+            <ChoiceBox fx:id="companyChoices" layoutX="25.0" layoutY="84.0" prefHeight="25.0" prefWidth="175.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" />
+            <ChoiceBox fx:id="gameChoices" layoutX="25.0" layoutY="26.0" prefHeight="25.0" prefWidth="175.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="225.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <children>
+            <BarChart fx:id="barChart" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <xAxis>
+                  <CategoryAxis side="BOTTOM" fx:id="xAxis" />
+               </xAxis>
+               <yAxis>
+                  <NumberAxis side="LEFT" />
+               </yAxis>
+            </BarChart>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
