added exit button on login screen. fix digital output. added delay and gradual change on output. updated css.

--- a/src/main/java/com/creatingskies/game/login/Login.fxml
+++ b/src/main/java/com/creatingskies/game/login/Login.fxml
@@ -25,7 +25,8 @@
             <PasswordField fx:id="passwordField" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <Button defaultButton="true" layoutX="444.0" layoutY="139.0" minWidth="100.0" mnemonicParsing="false" onAction="#login" styleClass="button-primary" text="Login" AnchorPane.rightAnchor="10.0" />
-      <Label layoutX="10.0" layoutY="130.0" onMouseClicked="#handleForgotPassword" style="-fx-cursor: hand;" text="Forgot Password" />
+      <Button defaultButton="true" layoutX="277.0" layoutY="144.0" minWidth="100.0" mnemonicParsing="false" onAction="#login" styleClass="button-primary" text="Login" AnchorPane.rightAnchor="123.0" />
+      <Label layoutX="10.0" layoutY="148.0" onMouseClicked="#handleForgotPassword" style="-fx-cursor: hand;" text="Forgot Password" />
+      <Button layoutX="390.0" layoutY="144.0" minWidth="100.0" mnemonicParsing="false" onAction="#exit" text="Exit" />
    </children>
 </AnchorPane>
