--- a/src/main/java/com/creatingskies/game/config/icon/TileImageDialog.fxml
+++ b/src/main/java/com/creatingskies/game/config/icon/TileImageDialog.fxml
@@ -7,12 +7,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="200.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.config.icon.TileImageDialogController">
+<AnchorPane minWidth="600.0" prefHeight="200.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.config.icon.TileImageDialogController">
 	<children>
 		<GridPane hgap="10.0" layoutX="162.0" layoutY="120.0" prefHeight="400.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="59.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="10.0" prefWidth="320.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="10.0" prefWidth="113.0" />
 			</columnConstraints>
 			<rowConstraints>
@@ -35,8 +35,8 @@
 				<Label text="Image" GridPane.rowIndex="1" />
 				<HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
 					<children>
-						<TextField fx:id="fileNameField" editable="false" prefHeight="25.0" prefWidth="375.0" />
-						<Button minWidth="75.0" mnemonicParsing="false" onAction="#handleOpenBrowseDialog" text="Browse" />
+						<TextField fx:id="fileNameField" editable="false" HBox.hgrow="ALWAYS" />
+						<Button mnemonicParsing="false" onAction="#handleOpenBrowseDialog" text="Browse" />
 					</children>
 				</HBox>
             <ImageView fx:id="previewImage" fitHeight="100.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowSpan="2" />
