--- a/src/main/java/com/creatingskies/game/editor/GameProperties.fxml
+++ b/src/main/java/com/creatingskies/game/editor/GameProperties.fxml
@@ -50,19 +50,19 @@
                <children>
                   <GridPane hgap="10.0">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="48.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="127.0" minWidth="48.0" prefWidth="122.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="93.0" minWidth="10.0" prefWidth="93.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <TextField fx:id="widthTextField" />
-                        <TextField fx:id="heightTextField" prefWidth="129.0" GridPane.columnIndex="2" />
-                        <Label text="Width" GridPane.columnIndex="1" />
-                        <Label text="Height" GridPane.columnIndex="3" />
+                        <TextField fx:id="widthTextField" GridPane.columnIndex="1" />
+                        <TextField fx:id="heightTextField" prefWidth="129.0" GridPane.columnIndex="3" />
+                        <Label text="Width" />
+                        <Label text="Height" GridPane.columnIndex="2" />
                      </children>
                   </GridPane>
                </children>
