update forgot password

--- a/src/main/java/com/creatingskies/game/login/ChangePassword.fxml
+++ b/src/main/java/com/creatingskies/game/login/ChangePassword.fxml
@@ -96,6 +96,25 @@
                   </HBox>
                </children>
             </VBox>
+            <VBox fx:id="staffInfoBox" alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER_LEFT" maxWidth="300.0" prefWidth="300.0" spacing="20.0">
+                     <children>
+                        <Label text="Please contact your system administrator" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" maxWidth="300.0" prefWidth="300.0" spacing="20.0" />
+                  <HBox alignment="TOP_RIGHT" maxHeight="50.0" maxWidth="300.0" prefHeight="50.0" prefWidth="300.0">
+                     <children>
+                        <ButtonBar prefHeight="50.0" prefWidth="451.0">
+                           <buttons>
+                              <Button defaultButton="true" mnemonicParsing="false" onAction="#showLogin" text="Ok" />
+                           </buttons>
+                        </ButtonBar>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
          </children>
       </VBox>
    </children>
