--- a/src/main/java/com/creatingskies/game/statistics/Statistics.fxml
+++ b/src/main/java/com/creatingskies/game/statistics/Statistics.fxml
@@ -10,33 +10,37 @@
    <children>
       <AnchorPane maxWidth="225.0" prefHeight="450.0" prefWidth="250.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
-            <Label layoutX="25.0" layoutY="7.0" text="Game" AnchorPane.leftAnchor="25.0" />
-            <Label layoutX="25.0" layoutY="64.0" text="Company" AnchorPane.leftAnchor="25.0" />
-            <Label layoutX="25.0" layoutY="123.0" text="Start Date" AnchorPane.leftAnchor="25.0" />
-            <DatePicker fx:id="startDatePicker" layoutX="25.0" layoutY="143.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="30.0" />
-            <Label layoutX="26.0" layoutY="182.0" text="End Date" AnchorPane.leftAnchor="25.0" />
-            <DatePicker fx:id="endDatePicker" layoutX="26.0" layoutY="202.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="30.0" />
-            <Button layoutX="93.0" layoutY="421.0" mnemonicParsing="false" onAction="#filterResults" prefHeight="25.0" prefWidth="75.0" text="Filter" AnchorPane.rightAnchor="30.0" />
-            <ChoiceBox fx:id="companyChoices" layoutX="25.0" layoutY="84.0" prefHeight="25.0" prefWidth="175.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="30.0" />
-            <ChoiceBox fx:id="gameChoices" layoutX="25.0" layoutY="26.0" prefHeight="25.0" prefWidth="175.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="30.0" />
-            <RadioButton fx:id="dateAscending" layoutX="25.0" layoutY="271.0" mnemonicParsing="false" text="Oldest to Latest" AnchorPane.leftAnchor="25.0" />
-            <RadioButton fx:id="dateDescending" layoutX="25.0" layoutY="299.0" mnemonicParsing="false" text="Latest to Oldest" AnchorPane.leftAnchor="25.0" />
-            <Label layoutX="25.0" layoutY="248.0" text="Date" AnchorPane.leftAnchor="25.0" />
-            <RadioButton fx:id="speedAscending" layoutX="25.0" layoutY="353.0" mnemonicParsing="false" text="Lowest to Highest" AnchorPane.leftAnchor="25.0" />
-            <RadioButton fx:id="speedDescending" layoutX="25.0" layoutY="381.0" mnemonicParsing="false" text="Highest to Lowest" AnchorPane.leftAnchor="25.0" />
-            <Label layoutX="25.0" layoutY="330.0" text="Speed" AnchorPane.leftAnchor="25.0" />
+            <Label layoutX="25.0" layoutY="7.0" text="Game" AnchorPane.leftAnchor="10.0" />
+            <Label layoutX="25.0" layoutY="64.0" text="Company" AnchorPane.leftAnchor="10.0" />
+            <Label layoutX="25.0" layoutY="123.0" text="Start Date" AnchorPane.leftAnchor="10.0" />
+            <DatePicker fx:id="startDatePicker" layoutX="25.0" layoutY="143.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="5.0" />
+            <Label layoutX="26.0" layoutY="182.0" text="End Date" AnchorPane.leftAnchor="10.0" />
+            <DatePicker fx:id="endDatePicker" layoutX="26.0" layoutY="202.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="5.0" />
+            <Button layoutX="93.0" layoutY="421.0" mnemonicParsing="false" onAction="#filterResults" prefHeight="25.0" prefWidth="75.0" text="Filter" AnchorPane.bottomAnchor="34.0" AnchorPane.rightAnchor="5.0" />
+            <ChoiceBox fx:id="companyChoices" layoutX="25.0" layoutY="84.0" prefHeight="25.0" prefWidth="175.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="5.0" />
+            <ChoiceBox fx:id="gameChoices" layoutX="25.0" layoutY="26.0" prefHeight="25.0" prefWidth="175.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="5.0" />
+            <RadioButton fx:id="dateAscending" layoutX="25.0" layoutY="271.0" mnemonicParsing="false" text="Oldest to Latest" AnchorPane.leftAnchor="50.0" />
+            <RadioButton fx:id="dateDescending" layoutX="25.0" layoutY="299.0" mnemonicParsing="false" text="Latest to Oldest" AnchorPane.leftAnchor="50.0" />
+            <Label layoutX="25.0" layoutY="248.0" text="Date" AnchorPane.leftAnchor="10.0" />
+            <RadioButton fx:id="speedAscending" layoutX="25.0" layoutY="353.0" mnemonicParsing="false" text="Lowest to Highest" AnchorPane.leftAnchor="50.0" />
+            <RadioButton fx:id="speedDescending" layoutX="25.0" layoutY="381.0" mnemonicParsing="false" text="Highest to Lowest" AnchorPane.leftAnchor="50.0" />
+            <Label layoutX="25.0" layoutY="330.0" text="Speed" AnchorPane.leftAnchor="10.0" />
          </children>
       </AnchorPane>
       <AnchorPane AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
-            <BarChart fx:id="barChart" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <xAxis>
-                  <CategoryAxis side="BOTTOM" fx:id="xAxis" />
-               </xAxis>
-               <yAxis>
-                  <NumberAxis side="LEFT" />
-               </yAxis>
-            </BarChart>
+            <TableView fx:id="resultsTable" layoutX="45.0" layoutY="116.0" prefHeight="480.0" prefWidth="490.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <columns>
+                  <TableColumn fx:id="dateColumn" prefWidth="75.0" text="Date" />
+                  <TableColumn fx:id="gameColumn" prefWidth="75.0" text="Game" />
+                <TableColumn fx:id="companyColumn" prefWidth="75.0" text="Company" />
+                <TableColumn fx:id="groupColumn" prefWidth="75.0" text="Group" />
+                  <TableColumn fx:id="speedColumn" prefWidth="75.0" text="Speed" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
          </children>
       </AnchorPane>
    </children>
