--- a/src/main/resources/com/creatingskies/game/core/GameCore.fxml
+++ b/src/main/resources/com/creatingskies/game/core/GameCore.fxml
@@ -20,8 +20,8 @@
 						<Font size="96.0" />
 					</font>
 				</Label>
-      <AnchorPane fx:id="weatherContainer" opacity="0.5" prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0" AnchorPane.bottomAnchor="5.0" />
-      <GridPane prefWidth="253.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <AnchorPane fx:id="weatherContainer" opacity="0.5" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <GridPane opacity="0.6" prefWidth="253.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="10.0" prefWidth="130.0" />
           <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="84.0" />
@@ -32,18 +32,6 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
@@ -76,86 +64,6 @@
             <Label style="-fx-font-weight: bold;" text="Tile Slow Factor" textFill="WHITE" GridPane.rowIndex="5">
                <font>
                   <Font size="14.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-weight: bold;" text="Screen Width" textFill="WHITE" GridPane.rowIndex="11">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="screenWidthLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="11">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-weight: bold;" text="Screen Height" textFill="WHITE" GridPane.rowIndex="12">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="screenHeightLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="12">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-weight: bold;" text="Scroll Hval" textFill="WHITE" GridPane.rowIndex="14">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-weight: bold;" text="Scroll Vval" textFill="WHITE" GridPane.rowIndex="15">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-weight: bold;" text="Player X" textFill="WHITE" GridPane.rowIndex="17">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-weight: bold;" text="Player Y" textFill="WHITE" GridPane.rowIndex="18">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="scrollHvalLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="14">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Label fx:id="scrollVvalLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="15">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Label fx:id="playerXLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="17">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Label fx:id="playerYLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="18">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-weight: bold;" text="Map Width" textFill="WHITE" GridPane.rowIndex="8">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label style="-fx-font-weight: bold;" text="Map Height" textFill="WHITE" GridPane.rowIndex="9">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="mapWidthLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="8">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Label fx:id="mapHeightLabel" style="-fx-font-weight: bold;" text="0.0" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="9">
-               <font>
-                  <Font size="24.0" />
                </font>
             </Label>
             <Label style="-fx-font-weight: bold;" text="Weather Slow Factor" textFill="WHITE" GridPane.rowIndex="6">
